# ognet

./: .gitignore  DESCRIPTION.md  Dockerfile  docker-compose.yml  pyproject.toml  test.db
app/: main.py
app/api/: extinguisher.py
app/core/: config.py  tasks.py
app/crud/: extinguisher.py
app/db/: __init__.py
app/models/: __init__.py  extinguisher.py
app/schemas/: extinguisher.py
